--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
     defaultConfig {
         applicationId "com.vaiotech.attendaceapp"
         minSdkVersion 14
-        targetSdkVersion 15
+        targetSdkVersion 17
         versionCode 4
         versionName "4.0"
     }
@@ -26,16 +26,18 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile files('libs/core.jar')
     provided 'org.roboguice:roboblender:3.+'
-    compile files('libs/android-smart-image-view-1.0.0.jar')
     compile 'me.dm7.barcodescanner:zbar:1.5'
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.octo.android.robospice:robospice-retrofit:1.4.14'
     compile 'com.octo.android.robospice:robospice:1.4.14'
     compile 'org.roboguice:roboguice:3.+'
     compile 'com.android.support:support-v13:21.0.0'
-    compile files('libs/ndeftools-1.2.3.jar')
     compile 'com.romainpiel.shimmer:library:1.2.0@aar'
+    compile 'com.google.zxing:core:2.0'
 
+    compile files('libs/ndeftools-1.2.3.jar')
+    //compile 'eu.livotov.labs:zxscanlib:2.0.0-SNAPSHOT@aar'
+    //compile 'eu.livotov.labs:camview:1.0.0@aar'
+//    transitive = true
 }
