--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
         android:label="@string/app_name"
         android:launchMode="singleTop"
         android:theme="@style/AppTheme"
-        tools:replace="icon, label" >
+        tools:replace="android:label, android:icon"
+        >
         <activity
             android:name="com.vaiotech.attendaceapp.HomeActivity"
             android:label="@string/app_name" >
